kubernetes/apps/talos1018/network/ifconfig/app/deployment.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ifconfig
  labels:
    app.kubernetes.io/name: ifconfig
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ifconfig
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ifconfig
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: ifconfig
      containers:
        - name: ifconfig
          image: "georgyo/ifconfig.io:202303260813"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ip
              port: http
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ip
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: "0.1"
              memory: "64Mi"
            requests:
              cpu: "0.005"
              memory: "16Mi"
